--- a/envs/dev/backend-dev.conf
+++ b/envs/dev/backend-dev.conf
@@ -1,7 +1,7 @@
 terraform {
   backend "s3" {
     bucket         = "my-terraform-state-ashu-xyz"
-    key            = "terraform.tfstate"
+    key            = "dev-terraform.tfstate"
     region         = "ap-northeast-2"
     dynamodb_table = "terraform-locks"
     encrypt        = true
