--- a/.github/workflows/terraform-infra.yaml
+++ b/.github/workflows/terraform-infra.yaml
@@ -61,12 +61,12 @@ jobs:
 
       - name: Terraform Plan
         if: inputs.action == 'plan'
-        run: terraform plan -input=false
+        run: terraform plan --var-file=dev-tfvars -input=false
 
       - name: Terraform Plan (Apply Mode)
         if: inputs.action == 'apply'
-        run: terraform plan -input=false -out=tfplan
+        run: terraform plan --var-file=dev-tfvars -input=false -out=tfplan
 
       - name: Terraform Apply
         if: inputs.action == 'apply'
-        run: terraform apply -input=false tfplan
+        run: terraform apply --var-file=dev-tfvars -input=false tfplan
