--- a/.github/workflows/terraform-infra.yaml
+++ b/.github/workflows/terraform-infra.yaml
@@ -61,12 +61,11 @@ jobs:
 
       - name: Terraform Plan
         if: inputs.action == 'plan'
-        run: terraform plan --var-file=${{ inputs.environment }}-tfvars -input=false
+        run: terraform plan --var-file=${{ inputs.environment }}.tfvars -input=false
 
       - name: Terraform Plan (Apply Mode)
         if: inputs.action == 'apply'
-        run: terraform plan --var-file=${{ inputs.environment }}-tfvars -input=false -out=tfplan
-
+        run: terraform plan --var-file=${{ inputs.environment }}.tfvars -input=false -out=tfplan
       - name: Terraform Apply
         if: inputs.action == 'apply'
-        run: terraform apply --var-file=${{ inputs.environment }}-tfvars -input=false tfplan
+        run: terraform apply --var-file=${{ inputs.environment }}.tfvars -input=false tfplan
