--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -12,7 +12,7 @@ on:
 permissions:
   id-token: write
   contents: read
-  pull-requests: write   # needed to comment plan on PR
+  pull-requests: write
 
 jobs:
   terraform-plan:
@@ -20,17 +20,13 @@ jobs:
 
     strategy:
       matrix:
-        environment: [dev, stage, prod]
-
-    defaults:
-      run:
-        shell: bash
-        working-directory: envs/${{ matrix.environment }}
+        environment: [dev, test, prod]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      # Runs at repo root (IMPORTANT)
       - name: Configure Git for private module repo
         run: |
           git config --global url."https://${{ secrets.MODULE_REPO_TOKEN }}@github.com/".insteadOf "https://github.com/"
@@ -46,32 +42,35 @@ jobs:
         with:
           terraform_version: 1.6.6
 
+      # 🔽 Terraform commands only inside env directory
       - name: Terraform Init
+        working-directory: envs/${{ matrix.environment }}
         run: terraform init -input=false
 
       - name: Terraform Validate
+        working-directory: envs/${{ matrix.environment }}
         run: terraform validate
 
       - name: Terraform Plan
+        working-directory: envs/${{ matrix.environment }}
         run: |
           terraform plan \
             --var-file=${{ matrix.environment }}.tfvars \
             -input=false \
             -no-color | tee plan.txt
 
-      # 🔥 Show plan directly in PR
+      # 🔥 Show plan in PR
       - name: Comment plan on PR
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs')
-            const plan = fs.readFileSync('envs/${{ matrix.environment }}/plan.txt', 'utf8')
+            const env = '${{ matrix.environment }}'
+            const plan = fs.readFileSync(`envs/${env}/plan.txt`, 'utf8')
 
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `### Terraform Plan (${process.env.ENV})\n\n\`\`\`\n${plan}\n\`\`\``
+              body: `### Terraform Plan (${env})\n\n\`\`\`\n${plan}\n\`\`\``
             })
-        env:
-          ENV: ${{ matrix.environment }}
