--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -88,8 +88,8 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      - name: Terraform Format
-        run: terraform fmt -check -recursive
+      # - name: Terraform Format
+      #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
         working-directory: envs/stage
@@ -122,8 +122,8 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      - name: Terraform Format
-        run: terraform fmt -check -recursive
+      # - name: Terraform Format
+      #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
         working-directory: envs/prod
