Instance sized increaed to 2

--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       dev: ${{ steps.filter.outputs.dev }}
-      stage: ${{ steps.filter.outputs.stage }}
+      test: ${{ steps.filter.outputs.test }}
       prod: ${{ steps.filter.outputs.prod }}
       modules: ${{ steps.filter.outputs.modules }}
 
@@ -28,8 +28,8 @@ jobs:
           filters: |
             dev:
               - 'envs/dev/**'
-            stage:
-              - 'envs/stage/**'
+            test:
+              - 'envs/test/**'
             prod:
               - 'envs/prod/**'
             modules:
@@ -69,9 +69,9 @@ jobs:
         working-directory: envs/dev
         run: terraform plan -var-file=dev.tfvars -input=false
 
-  plan-stage:
+  plan-test:
     needs: detect-changes
-    if: needs.detect-changes.outputs.stage == 'true' || needs.detect-changes.outputs.modules == 'true'
+    if: needs.detect-changes.outputs.test == 'true' || needs.detect-changes.outputs.modules == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -80,7 +80,7 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN_STAGE }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN_TEST }}
           aws-region: ap-northeast-2
 
       - name: Setup Terraform
@@ -92,16 +92,16 @@ jobs:
       #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
-        working-directory: envs/stage
+        working-directory: envs/test
         run: terraform init -input=false
 
       - name: Terraform Validate
-        working-directory: envs/stage
+        working-directory: envs/test
         run: terraform validate
 
       - name: Terraform Plan
-        working-directory: envs/stage
-        run: terraform plan -var-file=stage.tfvars -input=false
+        working-directory: envs/test
+        run: terraform plan -var-file=test.tfvars -input=false
 
   plan-prod:
     needs: detect-changes
