--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -54,6 +54,9 @@ jobs:
         with:
           terraform_version: 1.6.6
 
+      # - name: Terraform Format
+      #   run: terraform fmt -check -recursive
+
       - name: Terraform Init
         working-directory: envs/dev
         run: terraform init -input=false
@@ -63,38 +66,8 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        id: plan
         working-directory: envs/dev
-        run: |
-          terraform plan -var-file=dev.tfvars -input=false -no-color | tee plan.txt
-
-      - name: Comment Terraform Plan (DEV)
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const plan = fs.readFileSync('envs/dev/plan.txt', 'utf8');
-
-            const body = `
-### 🧪 Terraform Plan – **DEV**
-
-<details>
-<summary>Click to expand</summary>
-
-\`\`\`terraform
-${plan}
-\`\`\`
-
-</details>
-`;
-
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body
-            });
+        run: terraform plan -var-file=dev.tfvars -input=false
 
   plan-test:
     needs: detect-changes
@@ -115,6 +88,9 @@ ${plan}
         with:
           terraform_version: 1.6.6
 
+      # - name: Terraform Format
+      #   run: terraform fmt -check -recursive
+
       - name: Terraform Init
         working-directory: envs/test
         run: terraform init -input=false
@@ -125,36 +101,7 @@ ${plan}
 
       - name: Terraform Plan
         working-directory: envs/test
-        run: |
-          terraform plan -var-file=test.tfvars -input=false -no-color | tee plan.txt
-
-      - name: Comment Terraform Plan (TEST)
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const plan = fs.readFileSync('envs/test/plan.txt', 'utf8');
-
-            const body = `
-### 🧪 Terraform Plan – **TEST**
-
-<details>
-<summary>Click to expand</summary>
-
-\`\`\`terraform
-${plan}
-\`\`\`
-
-</details>
-`;
-
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body
-            });
+        run: terraform plan -var-file=test.tfvars -input=false
 
   plan-prod:
     needs: detect-changes
@@ -175,6 +122,9 @@ ${plan}
         with:
           terraform_version: 1.6.6
 
+      # - name: Terraform Format
+      #   run: terraform fmt -check -recursive
+
       - name: Terraform Init
         working-directory: envs/prod
         run: terraform init -input=false
@@ -185,33 +135,4 @@ ${plan}
 
       - name: Terraform Plan
         working-directory: envs/prod
-        run: |
-          terraform plan -var-file=prod.tfvars -input=false -no-color | tee plan.txt
-
-      - name: Comment Terraform Plan (PROD)
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const plan = fs.readFileSync('envs/prod/plan.txt', 'utf8');
-
-            const body = `
-### 🚀 Terraform Plan – **PROD**
-
-<details>
-<summary>Click to expand</summary>
-
-\`\`\`terraform
-${plan}
-\`\`\`
-
-</details>
-`;
-
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body
-            });
+        run: terraform plan -var-file=prod.tfvars -input=false
