--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -67,7 +67,16 @@ jobs:
 
       - name: Terraform Plan
         working-directory: envs/dev
-        run: terraform plan -var-file=dev.tfvars -input=false
+        run: terraform plan -var-file=dev.tfvars -no-color | tee plan.txt
+
+      - name: Notify PR (DEV)
+        run: python3 scripts/terraform_notifier.py
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          TF_ENV: dev
+          PLAN_PATH: envs/dev/plan.txt
 
   plan-test:
     needs: detect-changes
@@ -126,7 +135,7 @@ jobs:
       #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
-        working-directory: envs/prod
+        working-directory: envs/dev
         run: terraform init -input=false
 
       - name: Terraform Validate
