--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -135,26 +135,26 @@ jobs:
       #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
-        working-directory: envs/dev
+        working-directory: envs/prod
         run: terraform init -input=false
 
       - name: Terraform Validate
         working-directory: envs/prod
         run: terraform validate
 
-      # - name: Terraform Plan
-      #   working-directory: envs/prod
-      #   run: terraform plan -var-file=prod.tfvars -input=false
-
       - name: Terraform Plan
-        working-directory: envs/dev
-        run: terraform plan -var-file=dev.tfvars -no-color | tee plan.txt
+        working-directory: envs/prod
+        run: terraform plan -var-file=prod.tfvars -input=false
 
-      - name: Notify PR (DEV)
-        run: python3 scripts/terraform_notifier.py
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          TF_ENV: dev
-          PLAN_PATH: envs/dev/plan.txt
+      # - name: Terraform Plan
+      #   working-directory: envs/dev
+      #   run: terraform plan -var-file=dev.tfvars -no-color | tee plan.txt
+
+      # - name: Notify PR (DEV)
+      #   run: python3 scripts/terraform_notifier.py
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     GITHUB_REPOSITORY: ${{ github.repository }}
+      #     PR_NUMBER: ${{ github.event.pull_request.number }}
+      #     TF_ENV: dev
+      #     PLAN_PATH: envs/dev/plan.txt
