--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -157,17 +157,13 @@ jobs:
 
       - name: Terraform Plan
         working-directory: envs/prod
-        run: terraform plan -var-file=prod.tfvars -input=false
+        run: terraform plan -var-file=prod.tfvars -no-color | tee plan.txt
 
-      - name: Terraform Plan
-        working-directory: envs/dev
-        run: terraform plan -var-file=dev.tfvars -no-color | tee plan.txt
-
-      - name: Notify PR (DEV)
+      - name: Notify PR (PROD)
         run: node scripts/terraform-notifier.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
-          TF_ENV: dev
-          PLAN_PATH: envs/dev/plan.txt
+          TF_ENV: prod
+          PLAN_PATH: envs/prod/plan.txt
