--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -17,6 +17,7 @@ jobs:
       test: ${{ steps.filter.outputs.test }}
       prod: ${{ steps.filter.outputs.prod }}
       modules: ${{ steps.filter.outputs.modules }}
+      bootstrap: ${{ steps.filter.outputs.bootstrap }}
 
     steps:
       - uses: actions/checkout@v4
@@ -34,10 +35,15 @@ jobs:
               - 'envs/prod/**'
             modules:
               - 'modules/**'
+            bootstrap:
+              - 'bootstrap/github-actions/**'
 
   plan-dev:
     needs: detect-changes
-    if: needs.detect-changes.outputs.dev == 'true' || needs.detect-changes.outputs.modules == 'true'
+    if: |
+      needs.detect-changes.outputs.dev == 'true' ||
+      needs.detect-changes.outputs.modules == 'true' ||
+      needs.detect-changes.outputs.bootstrap == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -53,9 +59,6 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-
-      # - name: Terraform Format
-      #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
         working-directory: envs/dev
@@ -80,7 +83,10 @@ jobs:
 
   plan-test:
     needs: detect-changes
-    if: needs.detect-changes.outputs.test == 'true' || needs.detect-changes.outputs.modules == 'true'
+    if: |
+      needs.detect-changes.outputs.test == 'true' ||
+      needs.detect-changes.outputs.modules == 'true' ||
+      needs.detect-changes.outputs.bootstrap == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -96,9 +102,6 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-
-      # - name: Terraform Format
-      #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
         working-directory: envs/test
@@ -123,7 +126,10 @@ jobs:
 
   plan-prod:
     needs: detect-changes
-    if: needs.detect-changes.outputs.prod == 'true' || needs.detect-changes.outputs.modules == 'true'
+    if: |
+      needs.detect-changes.outputs.prod == 'true' ||
+      needs.detect-changes.outputs.modules == 'true' ||
+      needs.detect-changes.outputs.bootstrap == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -139,9 +145,6 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
-
-      # - name: Terraform Format
-      #   run: terraform fmt -check -recursive
 
       - name: Terraform Init
         working-directory: envs/prod
